[project]
name = "free-tier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypurrquant",
    "enso-py",
]

[tool.uv.sources]
hypurrquant = { git = "https://github.com/hypurrquant/hypurrquant-fastapi.git", rev = "0.8.1.post8" }
enso-py = { git = "https://github.com/USEONGEE/enso-py.git", rev = "0.0.1.post1" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --maxfail=1 --disable-warnings"

# 테스트 탐색 경로
testpaths = [
    "test",
]

# src를 모듈 검색 경로에 추가
pythonpath = [
    "src",
]

# 마커 정의
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
